--- a/dog_images_aws/SagemakerTraining.ipynb
+++ b/dog_images_aws/SagemakerTraining.ipynb
@@ -68,7 +68,7 @@
       "source": [
         "from sagemaker.tensorflow import TensorFlow\n",
         "\n",
-        "git_config = {'repo': 'https://github.com/Cellular-Longevity/data-processing/', \n",
+        "git_config = {'repo': 'https://github.com/', \n",
         "              'branch': 'main'}\n",
         "\n",
         "train_instance_type = 'local'\n",
